[package]
name = "rm-nm"
version = "0.1.0"
edition = "2024"
default-run = "rm-nm"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
globset = "0.4.18"
home = "0.5.12"
jwalk = "0.8.1"
maud = { version = "0.27.0", features = ["axum"] }
reqwest = "0.12.28"
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
ulid = "1.2.1"
